@@ -56,6 +56,10 @@
       \item The included LAPACK has been updated to 3.4.1, with some
       patches from the current SVN sources.  (\emph{Inter alia}, this
       resolves \PR{14692}.)
+
+      \item \code{file.copy(recursive = TRUE)} has some additional
+      checks on user error leading to attempted infinite recursion (and on
+      some platforms to crashing \R).
     }
   }
 
@@ -194,6 +198,9 @@
       
       \item \code{logLik()} did not detect the error of applying it
       to a multiple-response linear model.  (\PR{15000})
+      
+      \item \code{file.copy(recursive = TRUE)} did not always report
+      \code{FALSE} for a failure two or more directories deep.
     }
   }
 }
